--- a/Frontends/FreeCourse.Web/Views/Shared/_Layout.cshtml
+++ b/Frontends/FreeCourse.Web/Views/Shared/_Layout.cshtml
@@ -21,11 +21,21 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
-                       
+
                     </ul>
                     @if (User.Identity.IsAuthenticated)
                     {
-
+                        <ul class="navbar-nav">
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                    @User.Identity.Name 
+                                </a>
+                                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                    <li><a class="dropdown-item" asp-controller="User" asp-action="Index">Profil</a></li>
+                                    <li><a class="dropdown-item" href="#">Çıkış</a></li>
+                                </ul>
+                            </li>
+                        </ul>
                     }
                     else
                     {
