--- a/Frontends/FreeCourse.Web/Views/Courses/Index.cshtml
+++ b/Frontends/FreeCourse.Web/Views/Courses/Index.cshtml
@@ -34,9 +34,8 @@
                                     <td>@item.Feature.Duration</td>
                                     <td>@item.Category.Name</td>
                                     <td>
-                                       @* <a asp-controller="Courses" asp-action="Update" asp-route-id="@item.Id" class="btn btn-success btn-sm">Güncelle</a>
-
-                                        <a asp-controller="Courses" asp-action="Delete" asp-route-id="@item.Id" class="btn btn-danger btn-sm">Sil</a>*@
+                                        <a asp-controller="Courses" asp-action="Update" asp-route-id="@item.Id" class="btn btn-success btn-sm">Güncelle</a>
+                                        <a asp-controller="Courses" asp-action="Delete" asp-route-id="@item.Id" class="btn btn-danger btn-sm">Sil</a>
                                     </td>
                                 </tr>
                             }
