--- a/Frontends/FreeCourse.Web/Views/Home/Index.cshtml
+++ b/Frontends/FreeCourse.Web/Views/Home/Index.cshtml
@@ -19,7 +19,7 @@
         }
         <div class="col">
             <div class="card">
-                <img src="@item.Picture" class="card-img-top" alt="...">
+                <img src="@item.StockPictureUrl" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">@item.Name</h5>
                     <div class="badge bg-primary">Kategori : @item.Category.Name</div>
