--- a/Frontends/FreeCourse.Web/Views/_ViewImports.cshtml
+++ b/Frontends/FreeCourse.Web/Views/_ViewImports.cshtml
@@ -1,4 +1,6 @@
 ﻿@using FreeCourse.Web
 @using FreeCourse.Web.Models
 @using FreeCourse.Web.Models.Catalogs
+@using FreeCourse.Web.Models.Baskets
+
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
