--- a/Frontends/FreeCourse.Web/Views/_ViewImports.cshtml
+++ b/Frontends/FreeCourse.Web/Views/_ViewImports.cshtml
@@ -2,5 +2,6 @@
 @using FreeCourse.Web.Models
 @using FreeCourse.Web.Models.Catalogs
 @using FreeCourse.Web.Models.Baskets
+@using FreeCourse.Web.Models.Orders
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
